@@ -1,5 +1,7 @@
 Revision history for libev, a high-performance and full-featured event loop.
 
+        - fix a bug where an inotify watcher was added twice, causing
+          freezes on hash collisions.
 	- new config symbol, EV_USE_CLOCK_SYSCALL, to make libev use
           a direct syscall - slower, but no dependency on librt et al.
         - assume negative return values != -1 signals success of port_getn
@@ -10,6 +12,7 @@ Revision history for libev, a high-performance and full-featured event loop.
         - fixed const object callbacks in ev++.h.
         - replaced loop_ref argument of watcher.set (loop) by a direct
           ev_loop * in ev++.h, to avoid clashes with functor patch.
+        - do not try to watch the empty string via inotify.
 
 3.49 Wed Nov 19 11:26:53 CET 2008
 	- ev_stat watchers will now use inotify as a mere hint on
